--- a/src/main/resources/html/heart.xhtml
+++ b/src/main/resources/html/heart.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Alice's Adventures in Wonderland -- Chapter I</title>
+    <title>File source png example.</title>
     <style type="text/css" media="all">
         img {
             border: 0px;
