--- a/src/main/resources/html/qr-code.xhtml
+++ b/src/main/resources/html/qr-code.xhtml
@@ -14,5 +14,13 @@
       width="128" height="128"
       data-ec-level="M"
       data-margin="2"/>
+<!--	  
+      <object
+        type="application/qrcode"
+        data="https://rekening.infomedics.nl/"
+        width="16mm" height="16mm"
+        data-ec-level="M"
+        data-margin="0"/>
+-->
 </body>
 </html>
