Quill Editor: Add support for Managed fonts.

--- a/fe-designer-dragdrop/samples/20-try-tbl-fact.xhtml
+++ b/fe-designer-dragdrop/samples/20-try-tbl-fact.xhtml
@@ -36,7 +36,7 @@
     }
 
     /*.pagebreak { page-break-after: always; } */
-    /*** Custom fonts ***/
+    /*** Custom managed-fonts ***/
     @font-face {
       font-family: 'Roboto';
       font-weight: normal;
