--- a/fe-designer-dragdrop/samples/20-by-ludo-handmade.xhtml
+++ b/fe-designer-dragdrop/samples/20-by-ludo-handmade.xhtml
@@ -36,7 +36,7 @@
     }
 
     /*.pagebreak { page-break-after: always; } */
-    /*** Custom managed-fonts ***/
+    /*** Custom fonts ***/
     @font-face {
       font-family: 'Roboto';
       font-weight: normal;
